--- a/nbcourse.yml
+++ b/nbcourse.yml
@@ -11,7 +11,7 @@ picture:
 authors:
   - name: Pierre Navaro
     email: pierre.navaro@univ-rennes1.fr
--chapter_preview_only:
+chapter_preview_only:
   - 8
 links:
   manual:
