--- a/.github/workflows/nbcourse.yml
+++ b/.github/workflows/nbcourse.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies and run nbcourse
       shell: bash -l {0}
       run: |
-        conda env update -f environment.yml -n base
-        conda run -n base python -m ipykernel install --user --name python3
+        conda env update -f environment.yml -n runenv
+        conda run -n runenv python -m ipykernel install --user --name python3
         conda run -n base python -m pip install nbcourse
         conda run -n base nbcourse -n 1
     - name: Deploy
