--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,10 @@
 channels:
-  - r
   - conda-forge
 dependencies:
   - jupytext
   - pandas
+  - r-irkernel
+  - r-ggplot
   - seaborn
   - scikit-learn
   - tqdm
