--- a/.github/workflows/nbcourse.yml
+++ b/.github/workflows/nbcourse.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         conda env update -f environment.yml -n runenv
         conda run -n runenv python -m ipykernel install --user --name python3
-        conda run -n runenv Rscript -e "IRkernel::installspec()" 
+        conda run -n runenv Rscript -e "IRkernel::installspec();" 
         conda run -n base python -m pip install --ignore-installed nbcourse
     - name: Run nbcourse
       shell: bash -l {0}
